@@ -50,6 +50,7 @@ $strAlterOrderBy = 'Altera la taula i ordena per';
 $strAnalyze = 'Analitza';
 $strAnalyzeTable = 'Analitza la taula';
 $strAnd = 'I';
+$strAndSmall = 'i';
 $strAndThen = 'i llavors';
 $strAngularLinks = 'Enllaços angulars';
 $strAnIndex = 'S\'ha afegit un índex a %s';
@@ -159,6 +160,7 @@ $strCompleteInserts = 'Completar insercions';
 $strCompression = 'Compressió';
 $strCompressionWillBeDetected = 'La compresió de l\'arxiu importat es detectarà automàticament des de: %s';
 $strConfigDefaultFileError = 'No es pot carregar la configuració per defecte des de: "%1$s"';
+$strConfigDirectoryWarning = 'El directori [code]config[/code], que s\'usa al procés de configuració, encara existeix dins del vostre directori de phpMyAdmin. Heu d\'esborrar-ho un cop heu acabat de configurar phpMyAdmin.';
 $strConfigFileError = 'phpMyAdmin és incapaç de llegir l\'arxiu de configuració!<br />Això pot succeir si php troba un error sintàctic en ell o bé php no pot trobar l\'arxiu.<br />Intenta obrir l\'arxiu de configuració directament fent servir l\'enllaç següent i comprova el(s) missatge(s) d\'error que rebs. En moltes ocasions una coma o punt i coma falta en algun lloc.<br />Si rebs una pàgina en blanc, tot està bé.';
 $strConfigureTableCoord = 'Configura les coordinades per la taula %s';
 $strConnectionError = 'No puc connectar: paràmetres incorrectes.';
@@ -186,6 +188,7 @@ $strCreateTable  = 'Crear taula';
 $strCreateUserDatabase = 'Base de dades per usuari';
 $strCreateUserDatabaseName = 'Crear base de dades amb el mateix nom i atorgar tots els permissos';
 $strCreateUserDatabaseNone = 'Cap';
+$strCreateUserDatabasePrivileges = 'Atorgar tots els permissos a la base de dades &quot;%s&quot;';
 $strCreateUserDatabaseWildcard = 'Atorgar tots els permissos en un nom comodí (nomusuari_%)';
 $strCreationDates = 'Datas de Creació/Modificació/Comprovació';
 $strCriteria = 'Criteris';
@@ -248,6 +251,7 @@ $strDisplayPDF = 'Mostrar esquema PDF';
 $strDoAQuery = 'Fer una "petició segons exemple" (comodí: "%")';
 $strDocSQL = 'DocSQL';
 $strDocu = 'Documentació';
+$strDoNotAutoIncrementZeroValues = 'No feu servir AUTO_INCREMENT per a valors zero';
 $strDownloadFile = 'Descarregar arxiu';
 $strDoYouReally = 'Realment vols fer?';
 $strDropDatabaseStrongWarning = 'Ets a punt d\' ELIMINAR completament una base de dades!';
@@ -334,6 +338,7 @@ $strGeneratePassword = 'Generar Contrasenya';
 $strGenTime = 'Temps de generació';
 $strGeorgian = 'Georgià';
 $strGerman = 'Alemany';
+$strGetMoreThemes = 'Obtenir més temes!';
 $strGlobal = 'global';
 $strGlobalPrivileges = 'Permissos generals';
 $strGlobalValue = 'Valor global';
@@ -355,6 +360,7 @@ $strHome = 'Inici';
 $strHomepageOfficial = 'Pàgina oficial del phpMyAdmin';
 $strHostEmpty = 'El nom del servidor és buit!';
 $strHost = 'Servidor';
+$strHostTableExplanation = 'Quan s\'utilitza la taula Host, aquest camp s\'ignora i es fan servir els valors enmagatzemats a la taula Host en lloc seu.';
 $strHTMLExcel = 'Microsoft Excel 2000';
 $strHTMLWord = 'Microsoft Word 2000';
 $strHungarian = 'Húngar';
@@ -449,6 +455,7 @@ $strLocalhost = 'Local';
 $strLocationTextfile = 'Ubicació de l\'arxiu de text';
 $strLogin = 'Identificació';
 $strLoginInformation = 'Informació d\'Identificació';
+$strLoginWithoutPassword = 'La configuració prohibeix la connexió sense contrasenya (veure AllowNoPassword)';
 $strLogout = 'Sortir';
 $strLogPassword = 'Contrasenya:';
 $strLogServerHelp = 'Pots entrar un nom d\'amfitrió/adreça IP i port separat per espai.';
@@ -514,6 +521,7 @@ $strNoFrames = 'phpMyAdmin és més fàcil amb un navegador que <b>suporti marcs
 $strNoIndex = 'No s\'ha definit l\'índex!';
 $strNoIndexPartsDefined = 'No s\'han definit parts de l\'índex!';
 $strNoModification = 'Sense canvis';
+$strNoneDefault = 'Cap';
 $strNone = 'Res';
 $strNo = 'No';
 $strNoOptions = 'Aquest format no té opcions';
@@ -696,6 +704,7 @@ $strRelationView = 'Vista de Relacions';
 $strReloadingThePrivileges = 'Recarregant permissos';
 $strReloadPrivileges = 'Recarregar permissos';
 $strReload = 'Recarregar';
+$strRemoveCRLF = 'Treure caracters CRLF de dins dels camps';
 $strRemovePartitioning = 'Eliminar particionament';
 $strRemoveSelectedUsers = 'Treure els usuaris triats';
 $strRenameDatabaseOK = 'Base de dades %s reanomenada a %s';
@@ -706,6 +715,10 @@ $strRepairTable = 'Reparar taula';
 $strReplaceNULLBy = 'Canvía NULL per';
 $strReplaceTable = 'Canviar les dades de la taula per l\'arxiu ';
 $strReplication = 'Replicació';
+$strReplicationStatus = 'Estat de la replicació';
+$strReplicationStatusInfo = 'Aquest servidor MySQL treballa com a %s al procés de <b>replicació</b>. Per a més informació sobre l\'estat de replicació al servidor, vegeu la secció <a href="#replication">replicació</a>.';
+$strReplicationStatus_master = 'Estat del mestre';
+$strReplicationStatus_slave = 'Estat de l\'esclau';
 $strReset = 'Esborrar';
 $strResourceLimits = 'Limit de recursos';
 $strRestartInsertion = 'Reiniciar l\'inserció amb %s files';
@@ -772,6 +785,7 @@ $strServerTabVariables = 'Variables';
 $strServerTrafficNotes = '<b>Ocupació de servidor</b>: Aquestes taules mostren la ocupació de la xarxa d\'aquest servidor MySQL des de l\'últim inici.';
 $strServerVars = 'Variables i configuracions del servidor';
 $strServerVersion = 'Versió del servidor';
+$strSessionGCWarning = 'El paràmetre de PHP [a@http://php.net/manual/en/session.configuration.php#ini.session.gc-maxlifetime@]session.gc_maxlifetime[/a] és menor que la caducitat de galetes (cookies) configurat a phpMyAdmin, degut a aixó, la vostra conenexió caducarà abans del establert a phpMyAdmin.';
 $strSessionStartupErrorGeneral = 'No es pot iniciar una sessió sense errors, comprova els error obtinguts al teu registre de PHP i/o servidor web i configura el teu entorn de PHP acuradament.';
 $strSessionValue = 'Valor de sessió';
 $strSetEnumVal = 'Si el tipus de camp és "enum" o "set", entra els valors fent servir el format: \'a\',\'b\',\'c\'...<br />Si mai necessites escriure la barra invertida ("\") o la cometa simple ("\'") abans d\'aquests valors, escriu barres invertides (per exemple \'\\\\xyz\' o \'a\\\'b\').';
@@ -997,11 +1011,13 @@ $strSetupSaveDir_desc = 'Directori del servidor ón pots desar les exportacions'
 $strSetupSaveDir_name = 'Directori de Desades';
 $strSetupServerAuthConfigMsg = 'Has triat el tipus d\'autenticació [kbd]config[/kbd] i has inclós el nom d\'usuari i la contrasenya per connexions automàtiques, que es una opció no recomanable per a servidors actius. Qualsevol que conegui la teva URL de phpMyAdmin pot accedir al teu panel directament. Estableix el [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]tipus d\'autenticació[/a] a [kbd]cookie[/kbd] o [kbd]http[/kbd].';
 $strSetupServerExtensionMsg = 'Hauries d\'utilitzar mysqli per raons de rendiment';
+$strSetupServerNoPasswordMsg = 'Esteu permetent connexions al servidor sense contrasenya.';
 $strSetupServersAdd = 'Afegir un nou servidor';
 $strSetupServers_AllowDeny_order_desc = 'Deixa en blanc si no l\'utilitzes';
 $strSetupServers_AllowDeny_order_name = 'Ordre d\'autenticació del servidor';
 $strSetupServers_AllowDeny_rules_desc = 'Deixa en blanc per als predeterminats';
 $strSetupServers_AllowDeny_rules_name = 'Regles d\'autenticació del servidor';
+$strSetupServers_AllowNoPassword_name = 'Permetre connexions sense contrasenya';
 $strSetupServers_AllowRoot_name = 'Permetre la connexió de root';
 $strSetupServers_auth_swekey_config_desc = 'El camí de l\'arxiu de configuració per [a@http://swekey.com]autenticació per maquinari SweKey[/a] (no trobat al teu arrel de documents; es recomana a: /etc/swekey.conf)';
 $strSetupServers_auth_swekey_config_name = 'Arxiu de configuració SweKey';
@@ -1032,6 +1048,7 @@ $strSetupServers_hide_db_desc = 'Amagar les bases de dades que compleixin una ex
 $strSetupServers_hide_db_name = 'Amagar bases de dades';
 $strSetupServers_history_desc = 'Deixa en blanc per desactivar el suport d\'historial de consultes SQL, predeterminat: [kbd]pma_history[/kbd]';
 $strSetupServers_history_name = 'Taula d\'historial de consultes SQL';
+$strSetupServers_host_desc = 'Nom del servidor ón MySQL és en marxa';
 $strSetupServers_host_name = 'Nom del servidor';
 $strSetupServers_LogoutURL_name = 'URL de desconnexió';
 $strSetupServers_nopassword_desc = 'Intentar connectar sense contrasenya';
@@ -1066,6 +1083,7 @@ $strSetupServers_user_desc = 'Deixa en blanc si no utilitzes l\'autenticació co
 $strSetupServers_user_name = 'Usuari per autenticació config';
 $strSetupServers_verbose_check_desc = 'Desactiva si saps que les teves taules pma_* estàn actualitzades a la darrera versió. Aixó evita problemes de comprobacions de compatibilitat i així aumenta el rendiment';
 $strSetupServers_verbose_check_name = 'Comprobació explicativa';
+$strSetupServers_verbose_desc = 'Descripció per a l\'usuari d\'aquest servidor. Deixar en blanc per mostrar el nom del servidor en lloc seu.';
 $strSetupServers_verbose_name = 'Nom explicatiu d\'aquest servidor';
 $strSetupSetValue = 'Establir valor: %s';
 $strSetupShowAll_desc = 'Si a un usuari se l\'hauria de mostrar el botó &quot;mostrar tots (els registres)&quot;';
@@ -1122,6 +1140,8 @@ $strSetupZipDumpExportWarning = '[a@?page=form&amp;formset=features#tab_Import_e
 $strSetupZipDumpImportWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Desempaquetat amb Zip[/a] necessita les funcions (%s) que no estàn disponibles en aquest sistema.';
 $strSetupZipDump_name = 'ZIP';
 $strShowAll = 'Mostra tot';
+$strShowBinaryContents = 'Mostrar continguts binaris';
+$strShowBLOBContents = 'Mostrar contingut BLOB';
 $strShowColor = 'Mostra color';
 $strShowDatadictAs = 'Format del Diccionari de Dades';
 $strShowFullQueries = 'Mostra Consultes completes';
@@ -1150,11 +1170,11 @@ $strShowStatusHandler_commitDescr = 'El nombre d\'instruccions COMMIT internes.'
 $strShowStatusHandler_deleteDescr = 'El nombre de vegades que s\'ha esborrat una fila d\'una taula.';
 $strShowStatusHandler_discoverDescr = 'El servidor MySQL pot preguntar al motor d\'enmagatzemament NDB Cluster si coneix quelcom taula amb el nom especificat. Aixó s\'anomena descobriment. Handler_discover indica el nombre de taules descobertes.';
 $strShowStatusHandler_read_firstDescr = 'El nombre de vegades que s\'ha llegit la primera entrada des d\'un índex. Si és alt, suggereix que el servidor està fent moltes cerques d\'índex complet; per exemple, SELECT col1 FROM taula, assumint que col1 és indexat.';
-$strShowStatusHandler_read_keyDescr = 'El nombre de peticions basades en una clau per llegir una fila. Si és alt, és una bona indicació de que les consultes i taules estàn indexades adequadament.';
+$strShowStatusHandler_read_keyDescr = 'El nombre de peticions basades en una clau per llegir una fila. Si és alt, és una bona indicació de que les consultes i taules estàn indexades acuradament.';
 $strShowStatusHandler_read_nextDescr = 'El nombre de peticions per llegir la següent fila en l\'ordre de la clau. Aixó s\'incrementa si s\'està consultant una columna d\'index amb limitació de rang o si s\'està fent una cerca d\'index.';
 $strShowStatusHandler_read_prevDescr = 'El nombre de peticions per llegir la fila anterior en l\'ordre de la clau. Aquest mètode de lectura s\'utilitza principalment per optimizar ORDER BY ... DESC.';
-$strShowStatusHandler_read_rndDescr = 'El nombre de peticions per llegir una fila basada en una posició fixa. Aixó és alt si es fan moltes consultes que requereixen ordenació del resultat. Probablement tens moltes consultes que fan que MySQL cerqui les taules senceres o bé hi ha joins que no fan servir les claus adequadament.';
-$strShowStatusHandler_read_rnd_nextDescr = 'El nombre de peticions per llegir la següent fila a l\'arxiu de dades. Aixó és alt si es fan moltes cerques de taula. Generalment, suggereix que les taules no estàn indexades adequadament o bé les consultes no estàn fetes per aprofitar les avantatges dels índexos definits.';
+$strShowStatusHandler_read_rndDescr = 'El nombre de peticions per llegir una fila basada en una posició fixa. Aixó és alt si es fan moltes consultes que requereixen ordenació del resultat. Probablement tens moltes consultes que fan que MySQL cerqui les taules senceres o bé hi ha joins que no fan servir les claus acuradament.';
+$strShowStatusHandler_read_rnd_nextDescr = 'El nombre de peticions per llegir la següent fila a l\'arxiu de dades. Aixó és alt si es fan moltes cerques de taula. Generalment, suggereix que les taules no estàn indexades acuradament o bé les consultes no estàn fetes per aprofitar les avantatges dels índexos definits.';
 $strShowStatusHandler_rollbackDescr = 'El nombre d\'instruccions ROLLBACK.';
 $strShowStatusHandler_updateDescr = 'El nombre de peticions per a actualitzar una fila en una taula.';
 $strShowStatusHandler_writeDescr = 'El nombre de peticions per a insertar una fila en una taula.';
@@ -1276,6 +1296,7 @@ $strStandInStructureForView = 'Stand-in estructura per a vista';
 $strStatCheckTime = 'Darrera comprovació';
 $strStatCreateTime = 'Creació';
 $strStatement = 'Sentències';
+$strStatic = 'estàtic';
 $strStatisticsOverrun = 'En un servidor ocupat, els comptadors de bytes poden excedir el seu tamany, llavors les estadístiques donades pel servidor MySQL poden ser incorrectes.';
 $strStatUpdateTime = 'Darrera actualització';
 $strStatus = 'Estat';
@@ -1434,30 +1455,6 @@ $strYes = 'Si';
 $strZeroRemovesTheLimit = 'Nota: Es treu el limit establint aquestes opcions a 0 (zero).';
 $strZip = '"comprimit amb zip"';
 
-// To translate:
-
-$strSessionGCWarning = 'Your PHP parameter [a@http://php.net/manual/en/session.configuration.php#ini.session.gc-maxlifetime@]session.gc_maxlifetime[/a] is lower that cookie validity configured in phpMyAdmin, because of this, your login will expire sooner than configured in phpMyAdmin.';  //to translate
-
-$strSetupServers_host_desc = 'Hostname where MySQL server is running';  //to translate
-$strSetupServers_verbose_desc = 'A user-friendly description of this server. Leave blank to display the hostname instead.';  //to translate
-$strCreateUserDatabasePrivileges = 'Grant all privileges on database &quot;%s&quot;';  //to translate
-$strShowBinaryContents = 'Show binary contents';  //to translate
-$strShowBLOBContents = 'Show BLOB contents';  //to translate
-$strStatic = 'static';  //to translate
-$strLoginWithoutPassword = 'Login without a password is forbidden by configuration (see AllowNoPassword)';  //to translate
-$strSetupServerNoPasswordMsg = 'You allow for connecting to the server without a password.';  //to translate
-$strSetupServers_AllowNoPassword_name = 'Allow logins without a password';  //to translate
-$strHostTableExplanation = 'When Host table is used, this field is ignored and values stored in Host table are used instead.';  //to translate
-$strGetMoreThemes = 'Get more themes!';  //to translate
-$strNoneDefault = 'None';  //to translate
-$strConfigDirectoryWarning = 'Directory [code]config[/code], which is used by the setup script, still exists in your phpMyAdmin directory. You should remove it once phpMyAdmin has been configured.';  //to translate
-$strRemoveCRLF = 'Remove CRLF characters within fields';  //to translate
-$strDoNotAutoIncrementZeroValues = 'Do not use AUTO_INCREMENT for zero values';  //to translate
-$strAndSmall = 'and';  //to translate
-$strReplicationStatus = 'Replication status';  //to translate
-$strReplicationStatusInfo = 'This MySQL server works as %s in <b>replication</b> process. For further information about replication status on the server, please visit the <a href="#replication">replication section</a>.';  //to translate
-$strReplicationStatus_master = 'Master status';  //to translate
-$strReplicationStatus_slave = 'Slave status';  //to translate
 $strNavTableFilter = 'Filter';  //to translate
 $strNavTableFilterReset = 'Reset filter';  //to translate
 ?>
